# LemonBot

./: .dockerignore  Cargo.toml  Dockerfile
LemonBot/: Program.cs
LemonBot/Features/: Squawk.cs
LemonBot/Models/: Config.cs  SaveData.cs
src/: config.rs  lib.rs  main.rs  save_data.rs
src/features/: mod.rs  squawk.rs
