[package]
name = "lemonbot"
version = "3.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
dotenvy = "0.15.7"
rand = "0.9.2"
ron = "0.12.0"
serde = "1.0.228"
serenity = "0.12.4"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = [ "full" ] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
